deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: one-click-service
spec:
  selector:
    app: one-click
  ports:
    - protocol: TCP
      port: 8090
